@@ -1,6 +1,8 @@
 1.2.2
 ----
 
+- Hash algorithms can now be configured to reject particular sources of input.
+- Added `DeviceFileInfo` to support custom input sources.
 - `FileAnalyer` does not add `nfo:FileDataObject` to instances of `IDriveInfo`.
 
 
